Add Gaming 2 performance profile
Change-Id: I6cadf03b340788cd79f4cd9c041f840dffaa498e

--- a/res/values-ru-rRU/app_profile_strings.xml
+++ b/res/values-ru-rRU/app_profile_strings.xml
@@ -14,6 +14,7 @@
     <string name="performance_battery">Батарея</string>
     <string name="performance_performance">Производительность</string>
     <string name="performance_gaming">Игровой</string>
+    <string name="performance_gaming2">Игровой 2</string>
     <string name="performance_camera">Камера</string>
     <string name="thermal_default">По умолчанию</string>
     <string name="thermal_balance">Сбалансированный</string>
