--- a/res/values/app_profile_arrays.xml
+++ b/res/values/app_profile_arrays.xml
@@ -8,6 +8,7 @@
     	<item>@string/performance_limited</item>
     	<item>@string/performance_performance</item>
     	<item>@string/performance_gaming</item>
+    	<item>@string/performance_gaming2</item>
     	<item>@string/performance_battery</item>
      </string-array>
      <string-array name="performance_listvalues">
@@ -16,6 +17,7 @@
     	<item>limited</item>
     	<item>performance</item>
     	<item>gaming</item>
+    	<item>gaming2</item>
     	<item>battery</item>
     </string-array>
 
