Add 'restrcit in idle'. Remove separate GP switch.
Change-Id: I6ee06779b954b415864d996197dcb64d9e2c7447

--- a/res/values-ru-rRU/app_profile_strings.xml
+++ b/res/values-ru-rRU/app_profile_strings.xml
@@ -84,4 +84,7 @@
     <string name="app_profile_restricted_title">Ограничить</string>
     <string name="app_profile_restricted_summary">Заблокировать работу приложения в фоновом режиме</string>
 
+    <string name="app_profile_restricted_idle_title">Ограничить во сне</string>
+    <string name="app_profile_restricted_idle_summary">Заблокировать работу приложения в режиме сна</string>
+
 </resources>
