Disable 'suspend while play' for now
Change-Id: I69d61f5a65043a65bed458b44833e5e7b167df77

--- a/res/xml/audio_tweaks.xml
+++ b/res/xml/audio_tweaks.xml
@@ -31,11 +31,11 @@
             android:summary="@string/audio_tweaks_hq_policy_summary"
             android:defaultValue="false" />
 
-        <SwitchPreference
+        <!-- SwitchPreference
             android:key="audio_tweaks_suspend_play"
             android:title="@string/audio_tweaks_suspend_play_title"
             android:summary="@string/audio_tweaks_suspend_play_summary"
-            android:defaultValue="false" />
+            android:defaultValue="false" / -->
 
         <com.aicp.gear.preference.GlobalSettingSwitchPreference
             android:key="baikalos_disable_hp_detect"
