--- a/res/values-ru-rRU/power_save_strings.xml
+++ b/res/values-ru-rRU/power_save_strings.xml
@@ -13,13 +13,16 @@
 
     <string name="default_profiles_title">Профили по умолчанию</string>
     <string name="powersave_hide_idle_title">Скрывать СОН от GMS</string>
-    <string name="powersave_hide_idle_summary">Скрывать режим глубокого сна от Google Play Services. Помогает от некоторых проблем с уведомлениями в сне. Увеличивает потребление батареи!</string>
+    <string name="powersave_hide_idle_summary">Скрывать режим глубокого сна от Google Play Services. Помогает от некоторых проблем с уведомлениями во сне. Увеличивает потребление батареи!</string>
     <string name="powersave_unrestricted_network_title">Не ограничивать сеть</string>
     <string name="powersave_unrestricted_network_summary">Не ограничивать доступ приложений к сети в режиме сна. Помогает решить проблемы с уведомлениями и повышенным потреблением энергии некоторыми приложениями.</string>
 
     <string name="powersave_gms_title">Google Services</string>
     <string name="powersave_gms_summary">Опции для Google Play Services</string>
 
+
+    <string name="powersave_gms_blocked_title">Заблокировать</string>
+    <string name="powersave_gms_blocked_summary">Заблокировать запуск Google Play Services. Некоторые приложения могут не работать! Возможны проблемы с уведомлениями!</string>
     <string name="powersave_gms_restricted_title">Ограничивать всегда</string>
     <string name="powersave_gms_restricted_summary">Ограничить активность Google Play Services. Некоторые приложения могут не работать! Возможны проблемы с уведомлениями!</string>
     <string name="powersave_gms_idle_restricted_title">Ограничивать в режиме ожидания</string>
