--- a/res/xml/app_profile.xml
+++ b/res/xml/app_profile.xml
@@ -19,6 +19,21 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/app_profile_title">
+
+        <SwitchPreference
+            android:key="app_profile_pinned"
+            android:title="@string/app_profile_pinned_title"
+            android:summary="@string/app_profile_pinned_summary"
+            android:defaultValue="false" />
+
+        <ListPreference
+            android:key="app_profile_background"
+            android:title="@string/app_profile_background_title"
+            android:entries="@array/background_restrictions_entries"
+            android:entryValues="@array/background_restrictions_values" 
+            android:defaultValue="default"
+            android:summary="%s"/>
+
         <ListPreference
             android:key="app_profile_performance"
             android:title="@string/app_profile_performance_title"
@@ -43,13 +58,13 @@
             android:defaultValue="default"
             android:summary="%s" />
 
-        <!-- ListPreference
+        <ListPreference
             android:key="app_profile_fps"
             android:title="@string/app_profile_fps_title"
             android:entries="@array/fps_listentries"
             android:entryValues="@array/fps_listvalues"
             android:defaultValue="default"
-            android:summary="%s" / -->
+            android:summary="%s" />
 
         <SwitchPreference
             android:key="app_profile_reader"
@@ -58,12 +73,20 @@
             android:persistent="false" />
 
         <SwitchPreference
-            android:key="app_profile_pinned"
-            android:title="@string/app_profile_pinned_title"
-            android:summary="@string/app_profile_pinned_summary"
+            android:key="app_profile_stamina"
+            android:title="@string/app_profile_stamina_title"
+            android:summary="@string/app_profile_stamina_summary"
             android:defaultValue="false" />
 
         <SwitchPreference
+            android:key="app_profile_require_gms"
+            android:title="@string/app_profile_require_gms_title"
+            android:summary="@string/app_profile_require_gms_summary"
+            android:defaultValue="false" />
+
+
+
+        <!-- SwitchPreference
             android:key="app_profile_stamina"
             android:title="@string/app_profile_stamina_title"
             android:summary="@string/app_profile_stamina_summary"
@@ -79,7 +102,7 @@
             android:key="app_profile_restricted_idle"
             android:title="@string/app_profile_restricted_idle_title"
             android:summary="@string/app_profile_restricted_idle_summary"
-            android:defaultValue="false" />
+            android:defaultValue="false" / -->
 
         <!-- SwitchPreference
             android:key="app_profile_disable_twl"
