--- a/res/xml/dashboard.xml
+++ b/res/xml/dashboard.xml
@@ -29,13 +29,23 @@
 
         <!-- Device Part -->
         <Preference
-            android:key="device_part"
+            android:key="device_parts"
             android:persistent="false"
             android:title="@string/device_part_title"
             android:icon="@drawable/ic_settings_device">
             <intent android:action="android.intent.action.MAIN"
                  android:targetPackage="org.lineageos.settings.device"
                  android:targetClass="org.lineageos.settings.device.DeviceSettings"/>
+        </Preference>
+
+        <Preference
+            android:key="lineage_parts"
+            android:persistent="false"
+            android:title="@string/device_part_title"
+            android:icon="@drawable/ic_settings_device">
+            <intent android:action="android.intent.action.MAIN"
+                 android:targetPackage="org.lineageos.settings"
+                 android:targetClass="org.lineageos.settings.DevicePreferenceActivity"/>
         </Preference>
 
     <!-- /PreferenceCategory -->
