--- a/res/xml/system_tweaks.xml
+++ b/res/xml/system_tweaks.xml
@@ -36,11 +36,11 @@
         android:defaultValue="false"
         android:disableDependentsState="true" />
 
-    <com.aicp.gear.preference.SystemSettingSwitchPreference
+    <!-- com.aicp.gear.preference.SystemSettingSwitchPreference
             android:key="use_old_mobiletype"
             android:title="@string/use_old_mobiletype_title"
             android:summary="@string/use_old_mobiletype_summary"
-            android:defaultValue="false" />      
+            android:defaultValue="false" /-->      
 
 
     <!-- PreferenceCategory
